<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Info">

    <TextView
        android:id="@+id/tv_title_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_info"
        app:layout_constraintVertical_bias="0.157">

        <TextView
            android:id="@+id/tv_info_p1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description_p1"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/tv_info_p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description_p2"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/tv_info_p3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description_p3"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/tv_info_p4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description_p4"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/tv_info_p5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description_p5"
            android:padding="5dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>